<resources>
    //App Name
    <string name="app_name">Check Engine</string>
    <string name="app_name_repair_schedule">Repair Schedule</string>
    <string name="app_name_last_repaired">Last Repaired</string>
    <string name="app_name_notifications">Notifications</string>
    <string name="app_name_garage">Garage</string>

    //Global
    <string name="global_placeholder">PlaceHolder</string>
    <string name="global_cancel">Cancel</string>
    <string name="global_save">Save</string>
    <string name="global_delete">Delete</string>
    <string name="global_edit">Edit</string>
    <string name="global_tap_to_update">Tap To Update</string>


    //Dropdown Menu
    <string name="action_home">Home</string>
    <string name="action_repair_schedule">Repair Schedule</string>
    <string name="action_last_repaired">Last Repaired</string>
    <string name="action_notifications">Notifications</string>
    <string name="action_garage">Garage</string>

    //Car Categories
    <string name="engine">Engine</string>
    <string name="wheels">Wheels</string>
    <string name="fluids">Fluids</string>

    //Car Items
    <string name="timing_belts">Timing Belts</string>
    <string name="solenoid">Solenoid</string>
    <string name="alternator">Alternator</string>
    <string name="starter">Starter</string>
    <string name="air_filter">Air Filter</string>
    <string name="disc_brakes">Disc Brakes</string>
    <string name="drum_brakes">Drum Brakes</string>
    <string name="rotors">Rotors</string>
    <string name="tires">Tires</string>
    <string name="rotate">Rotate</string>
    <string name="alignment">Alignment</string>
    <string name="oil">Enging Oil</string>
    <string name="brake">Brake Fluid</string>
    <string name="auto_transmission">Automatic Transmission Fluid</string>
    <string name="manual_transmission">Manual Transmission Fluid</string>
    <string name="radiator">Radiator Fluid</string>
    <string name="power_steering">Power Steering Fluid</string>
    <string name="coolant">Coolant</string>
    <string name="title_activity_settings">Settings</string>

    //Home Activity
    <string name="home_current_mileage">Current Mileage</string>
    <string name="home_upcoming_repairs"><u>Upcoming Repairs</u></string>

    //Repair Schedule Activity
    <string name="repair_schedule_hint">How Often Should These Be Repaired?</string>

    //Last Repaired Activity
    <string name="last_repaired_title">Last Repaired</string>
    <string name="last_repaired_hint">When Was The Last Time These Were Repaired?</string>

    //car_list_item.xml
    <string name="settings_mi">mi</string>

    //Notifications
    <string name="notification_title"><u>Notifications</u></string>
    <string name="notification_threshold">Repair Notification Threshold</string>
    <string name="notification_threshold_hint">When Notifications Will Begin To Appear</string>
    <string name="notification_locations">Where would you like to see notifications?</string>
    <string name="notification_bar">Android Notification Bar</string>
    <string name="notification_lock_screen">Lock Screen Notifications</string>
    <string name="notification_frequency">How Frequently?</string>

    //Garage
    <string name="garage_title">Garage</string>
    <string name="garage_add_car">Add A Ride</string>
    <string name="garage_choose_vehicle">Choose Your Vehicle</string>
    <string name="garage_make">Make</string>
    <string name="garage_model">Model</string>
    <string name="garage_year">Year</string>

    //Car Info Input
    <string name="car_input_add_car"><u>Add A Ride</u></string>
    <string name="car_input_hint"><i>Please fill out the entire form</i></string>
    <string name="car_input_create_defaults">Create With Defaults</string>
    <string name="car_input_create_last_repaired">Set Last Repair</string>
    <string name="car_input_name">Car Name</string>
    <string name="car_input_current_mileage">Current Mileage</string>
    <string name="car_input_make">Make</string>
    <string name="car_input_model">Model</string>
    <string name="car_input_year">Year</string>
    <string name="car_info_delete_edit_message">What Would You Like To Do?</string>


</resources>
