<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.action_laptop.checkengine.MainActivity" >
    <item android:id="@+id/action_home"
        android:title="@string/action_home"
        android:orderInCategory="103"
        app:showAsAction="never" />
    <item android:id="@+id/action_repair_schedule"
        android:title="@string/action_repair_schedule"
        android:orderInCategory="103"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_last_repaired"
        android:orderInCategory="105"
        android:title="@string/action_last_repaired" />
    <item
        android:id="@+id/action_notifications"
        android:orderInCategory="106"
        android:title="@string/action_notifications" />
</menu>
