<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtEditDeleteDialogHeader"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:fontFeatureSettings="smcp"
        android:gravity="center"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/txtEditDeleteDialogMessage"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:text="@string/car_info_delete_edit_message"
        android:gravity="center"
        android:textSize="18sp"
        android:fontFeatureSettings="smcp" />

    <TableRow
        android:id="@+id/tblrEditDeleteDialogBtnContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="20">

        <Button
            android:id="@+id/btnEditDeleteDialogDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:text="@string/global_delete" />

        <Button
            android:id="@+id/btnDeleteEditDialogEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:text="@string/global_edit" />

    </TableRow>
</LinearLayout>