<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingEnd="15sp"
    android:paddingRight="15sp"
    android:paddingStart="15sp"
    android:paddingLeft="15sp"
    android:paddingBottom="15sp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingTop="20sp"
        android:text="@string/car_input_add_car"
        android:textSize="22sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/car_input_hint"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="14sp"
        android:paddingBottom="15sp" />

    <TableRow
        android:id="@+id/tblrCarNameInput"
        android:layout_width="match_parent"
        android:layout_height="45sp"
        android:weightSum="20" >

        <TextView
            android:id="@+id/txtCarNameInputHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingEnd="10sp"
            android:paddingRight="10sp"
            android:text="@string/car_input_name"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edTxtCarNameInputValue"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:inputType="text"
            android:maxLength="24" >
        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/tblrCarMileageInput"
        android:layout_width="match_parent"
        android:layout_height="45sp"
        android:weightSum="20" >

        <TextView
            android:id="@+id/txtCarMileageInputHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingEnd="10sp"
            android:paddingRight="10sp"
            android:text="@string/car_input_current_mileage"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edTxtCarMileageInputValue"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:inputType="number"
            android:maxLength="7"
            android:layout_marginLeft="2sp">
        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/tblrCarMakeInput"
        android:layout_width="match_parent"
        android:layout_height="45sp"
        android:weightSum="20" >

        <TextView
            android:id="@+id/txtCarMakeInputHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingEnd="10sp"
            android:paddingRight="10sp"
            android:text="@string/car_input_make"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edTxtCarMakeInputValue"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:inputType="text"
            android:maxLength="24">
        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/tblrCarModelInput"
        android:layout_width="match_parent"
        android:layout_height="45sp"
        android:weightSum="20">

        <TextView
            android:id="@+id/txtCarModelInputHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingEnd="10sp"
            android:paddingRight="10sp"
            android:text="@string/car_input_model"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edTxtCarModelInputValue"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:inputType="text"
            android:maxLength="24">
        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/tblrCarYearInput"
        android:layout_width="match_parent"
        android:layout_height="45sp"
        android:weightSum="20">

        <TextView
            android:id="@+id/txtCarYearInputHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingEnd="10sp"
            android:paddingRight="10sp"
            android:text="@string/car_input_year"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edTxtCarYearInputValue"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:inputType="number"
            android:maxLength="4">
        </EditText>
    </TableRow>
</LinearLayout>