<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.action_laptop.checkengine.NotificationsActivity"
    tools:showIn="@layout/activity_notifications">

    <LinearLayout
        android:id="@+id/vertLinLayoutCarNotificationsList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingTop="0dp"
        android:weightSum="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TableRow
            android:id="@+id/tblRowNotificationMileageThreshold"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:weightSum="20">

            <LinearLayout
                android:id="@+id/relLayoutMileageReminderHeaderContainer"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="13"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtMileageReminderHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|start"
                    android:paddingLeft="12dp"
                    android:paddingStart="12dp"
                    android:paddingTop="10dp"
                    android:text="@string/notification_threshold"
                    android:textAlignment="viewStart"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/txtMileageReminderHint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|start"
                    android:paddingLeft="13dp"
                    android:paddingStart="13dp"
                    android:text="@string/notification_threshold_hint"
                    android:textAlignment="viewStart"
                    android:textSize="12sp" />
            </LinearLayout>

            <TextSwitcher
                android:id="@+id/txtSwitcherMileageThresholdValue"
                android:layout_weight="5"
                android:layout_width="0sp"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="bottom|end"
                    android:maxLength="7"
                    android:paddingBottom="5sp"
                    android:paddingRight="4sp"
                    android:selectAllOnFocus="true"
                    android:textColor="#000"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="bottom|end"
                    android:maxLength="7"
                    android:paddingBottom="5sp"
                    android:paddingRight="4sp"
                    android:selectAllOnFocus="true"
                    android:textColor="#000"
                    android:textSize="18sp"/>
            </TextSwitcher>

            <TextView
                android:id="@+id/txtMileageAbbreviation"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="bottom|start"
                android:paddingBottom="5sp"
                android:paddingLeft="5sp"
                android:text="@string/settings_mi" />
        </TableRow>

        <TableRow
            android:id="@+id/tblRowFrequencyNotification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="20">

            <TextView
                android:id="@+id/txtViewFrequencyNotification"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="12"
                android:paddingBottom="12dp"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingTop="12dp"
                android:text="@string/notification_frequency"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinnerFrequencyNotification"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8" />

        </TableRow>

        <TableRow
            android:id="@+id/tblRowLockScreenNotification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="20">

            <TextView
                android:id="@+id/txtViewLockScreenNotifications"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="18"
                android:paddingBottom="12dp"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingTop="12dp"
                android:text="@string/notification_lock_screen"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/chkBoxLockScreenNotifications"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2" />
        </TableRow>

        <TableRow
            android:id="@+id/tblRowAndroidNotificationBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="20">

            <TextView
                android:id="@+id/txtViewAndroidNotificationBar"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="18"
                android:paddingBottom="12dp"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingTop="12dp"
                android:text="@string/notification_bar"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/chkBoxAndroidNotificationBar"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2" />
        </TableRow>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
